# ariadne-relay

./: .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
ariadne_relay/: __init__.py  base.py  interfaces.py  node.py  objects.py  utils.py
ariadne_relay/connection/: __init__.py  base.py  proxy.py  reference.py  snake_case.py
tests/: conftest.py  test_connection.py  test_node.py
tests/asgi/: conftest.py  test_query_execution.py
