[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ariadne-relay"
authors = [{name = "General Intelligence Inc.", email = "info@g18e.com"}]
dynamic = ["version", "description"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "ariadne>=0.15.0",
  "graphql-relay>=3.2.0",
]


[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "flake8",
  "flake8-builtins",
  "flake8-import-order",
]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]

[project.urls]
Source = "https://github.com/g18e/ariadne-relay"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | snapshots
)/
'''

[tool.isort]
force_single_line = false
include_trailing_comma = true
known_first_party = "ariadne_relay"
line_length = 88
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
profile = "google"

[tool.mypy]
files = ["ariadne_relay", "tests"]
follow_imports = "silent"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
